using System;

namespace Uebung6
{
	interface IStrokeable
	{
		//Stroke the pet:
		void Stroke();
	}
}
